--- a/index.html
+++ b/index.html
@@ -339,10 +339,10 @@
                         </div>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
-                        <a href="https://twitter.com/BookOfCat_" target="_blank"><button style="--slant:40px;--border:8px"><img src="images/icons8-twitterx-96.png"></button></a>
+                        <a href="https://twitter.com/_" target="_blank"><button style="--slant:40px;--border:8px"><img src="images/icons8-twitterx-96.png"></button></a>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
-                        <a href="https://t.me/BookOfCat" target="_blank"><button style="--color:#f3738a;--slant:40px;--border:8px"><img src="images/icons8-telegram-96.png"></button></a>
+                        <a href="https://t.me/" target="_blank"><button style="--color:#f3738a;--slant:40px;--border:8px"><img src="images/icons8-telegram-96.png"></button></a>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
                         <a href="https://dexscreener.com/solana/0x00000000000000000000" target="_blank"><button style="--color:#69db3a;--slant:40px;--border:8px"><img src="images/dexs.png"></button></a>
@@ -361,8 +361,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <a href="mailto:BookOfcatsol@hotmail.com">
-                                <p><strong>BookOfcatsol@hotmail.com</strong></p>
+                            <a href="mailto:sol@hotmail.com">
+                                <p><strong>sol@hotmail.com</strong></p>
                             </a>
                         </div>
                     </div>
