--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body id="body">
+<body id="body" style="overflow-x: hidden;">
 
     <div id="test">
         <div class="animation01">
@@ -169,7 +169,7 @@
 
     </div>
 
-    <div id="content">
+    <div id="content" style="width: 100vw; overflow-x: hidden;">
         <!-- 
 	    Header start
 	    ==================== -->
@@ -177,7 +177,7 @@
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" style="display: none;">
 	                    <span class="sr-only">Toggle navigation</span>
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
