--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	                </button>
                     <a class="navbar-brand" href="#">
                         <h1 class="logo-1"><strong>BOOK OF DOG</strong></h1>
-                        <h1 class="logo-2" style="color: black;"><strong>BOOK OF DOG/strong</h1>
+                        <h1 class="logo-2" style="color: black;"><strong>BOOK OF DOG</h1>
 	                </a>
 	            </div>
 
