--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
             </div>
         </section>
 
-        <!-- <footer>
+        <footer>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="block">
-                            <a href="mailto:sol@hotmail.com">
-                                <p><strong>sol@hotmail.com</strong></p>
+                            <a href="mailto:Bookofdog2@gmail.com">
+                                <p><strong>Bookofdog2@gmail.com</strong></p>
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </footer> -->
+        </footer>
     </div>
 
     <script>
