--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="heading wow fadeInUp">
                         <h2>Tokenomics</h2>
                         <h3>Contract Address</h3>
-                        <p><strong>0x00000000000000000000</strong></p>
+                        <p><strong>4VF2BwymgYqUimo5QF5aLN6jSHwmXkdDnQ58kt8GaVnf</strong></p>
                 </div>
                 <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.6s">
                     <div class="service">
@@ -339,13 +339,13 @@
                         </div>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
-                        <a href="https://twitter.com/_" target="_blank"><button style="--slant:40px;--border:8px"><img src="images/icons8-twitterx-96.png"></button></a>
+                        <a href="https://x.com/book_of_dog_sol?t=wYzVIO8pbjG7tmp1Kxem5g&s=09" target="_blank"><button style="--slant:40px;--border:8px"><img src="images/icons8-twitterx-96.png"></button></a>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
-                        <a href="https://t.me/" target="_blank"><button style="--color:#f3738a;--slant:40px;--border:8px"><img src="images/icons8-telegram-96.png"></button></a>
+                        <a href="https://t.me/bookofdog" target="_blank"><button style="--color:#f3738a;--slant:40px;--border:8px"><img src="images/icons8-telegram-96.png"></button></a>
                     </div>
                     <div class="col-sm-8 col-md-4 wow fadeInLeft" style="text-align: center;">
-                        <a href="https://dexscreener.com/solana/0x00000000000000000000" target="_blank"><button style="--color:#69db3a;--slant:40px;--border:8px"><img src="images/dexs.png"></button></a>
+                        <a href="https://dexscreener.com/solana/4VF2BwymgYqUimo5QF5aLN6jSHwmXkdDnQ58kt8GaVnf" target="_blank"><button style="--color:#69db3a;--slant:40px;--border:8px"><img src="images/dexs.png"></button></a>
                     </div>
                 </div>
             </div>
